load("@bazel_skylib//rules:expand_template.bzl", "expand_template")
load("@rules_dotnet//dotnet:defs.bzl", "csharp_library")
load("//tools/build:python.bzl", "py_lint_test")
load("@krpc_core//tools/service_definitions:defs.bzl", "service_definitions")
load("//lib:ksp.bzl", "ksp_deps")
load("//:config.bzl", "version")

# filegroup(
#     name = "SpaceCenter",
#     srcs = [
#         "CHANGES.txt",
#         "LICENSE",
#         "src/module-manager.cfg",
#         ":KRPC.SpaceCenter",
#         ":ServiceDefinitions",
#         "@module_manager//file",
#     ],
#     visibility = ["//:__pkg__"],
# )

csharp_library(
    name = "space_center",
    srcs = [":assembly_info"] + glob(["src/**/*.cs"]),
    out = "KRPC.SpaceCenter",
    private_deps = ksp_deps,
    target_frameworks = ["netstandard2.1"],
    treat_warnings_as_errors = True,
    visibility = ["//visibility:public"],
    warning_level = 4,
    deps = [
        "//server",
        "//server:core",
    ],
)

expand_template(
    name = "assembly_info",
    out = "src/AssemblyInfo.cs",
    substitutions = {"{VERSION}": version},
    template = "src/AssemblyInfo.cs.tmpl",
    visibility = ["//visibility:public"],
)

service_definitions(
    name = "service_definitions",
    srcs = [":space_center"] + ksp_deps,
    out = "KRPC.SpaceCenter.json",
    service = "SpaceCenter",
    visibility = ["//visibility:public"],
)

test_suite(
    name = "test",
    tests = [":lint"],
)

test_suite(
    name = "lint",
    tests = [
        ":pylint",
    ],
)

py_lint_test(
    name = "pylint",
    size = "medium",
    srcs = glob(["test/*.py"]),
    pylint_config = "test/pylint.rc",
    deps = [
        "//client/python",
        "//tools/krpctest",
    ],
)
